--- a/array-chunks.cabal
+++ b/array-chunks.cabal
@@ -1,6 +1,6 @@
-cabal-version:       2.2
+cabal-version: 2.2
 name: array-chunks
-version: 0.1.0.0
+version: 0.1.1.0
 synopsis: Lists of chunks
 description:
   Lists of chunks. This is similar to the Cons List provided
@@ -21,6 +21,7 @@ library
   build-depends:
     , base >=4.12 && <5
     , primitive >=0.6.4 && <0.8
+    , run-st >=0.1 && <0.2
   hs-source-dirs: src
   default-language: Haskell2010
   ghc-options: -O2 -Wall
