--- a/array-chunks.cabal
+++ b/array-chunks.cabal
@@ -1,43 +1,52 @@
-cabal-version: 2.2
-name: array-chunks
-version: 0.1.4.0
-synopsis: Lists of chunks
+cabal-version:   2.2
+name:            array-chunks
+version:         0.1.4.1
+synopsis:        Lists of chunks
 description:
   Lists of chunks. This is similar to the Cons List provided
   by `Data.List`, but it is more useful as a target for a
   builder since the chunks are cache coherent.
-homepage: https://github.com/andrewthad/array-chunks
-bug-reports: https://github.com/andrewthad/array-chunks/issues
-license: BSD-3-Clause
-license-file: LICENSE
-author: Andrew Martin
-maintainer: andrew.thaddeus@gmail.com
-copyright: 2019 Andrew Martin
-category: Data
-extra-source-files: CHANGELOG.md
+
+homepage:        https://github.com/byteverse/array-chunks
+bug-reports:     https://github.com/byteverse/array-chunks/issues
+license:         BSD-3-Clause
+license-file:    LICENSE
+author:          Andrew Martin
+maintainer:      amartin@layer3com.com
+copyright:       2019 Andrew Martin
+category:        Data
+extra-doc-files: CHANGELOG.md
+
+common build-settings
+  default-language: Haskell2010
+  ghc-options:      -Wall -Wunused-packages
 
 library
+  import:          build-settings
   exposed-modules: Data.Chunks
   build-depends:
-    , base >=4.12 && <5
-    , primitive >=0.6.4 && <0.10
-    , run-st >=0.1 && <0.2
-  hs-source-dirs: src
-  default-language: Haskell2010
-  ghc-options: -O2 -Wall
+    , base       >=4.12  && <5
+    , primitive  >=0.6.4 && <0.10
+    , run-st     >=0.1   && <0.2
+
+  hs-source-dirs:  src
+  ghc-options:     -O2
 
 test-suite test
-  type: exitcode-stdio-1.0
+  import:         build-settings
+  type:           exitcode-stdio-1.0
   hs-source-dirs: test
-  main-is: Main.hs
+  main-is:        Main.hs
   build-depends:
-    , QuickCheck
     , array-chunks
     , base
     , primitive
-    , quickcheck-classes >=0.6.3 && <0.7
+    , QuickCheck
+    , quickcheck-classes  >=0.6.3 && <0.7
     , tasty
     , tasty-hunit
     , tasty-quickcheck
-  ghc-options: -Wall -O2
-  default-language: Haskell2010
+
+source-repository head
+  type:     git
+  location: git://github.com/byteverse/array-chunks.git
