Added cabal.project to tarball.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,4 +9,4 @@ jobs:
     uses: byteverse/.github/.github/workflows/build.yaml@main
     secrets: inherit
     with:
-      release: true
+      release: false
